--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,8 @@
     <body>
         <div class="main-content">        
             {{>header}}
-            <img class="portrait" src="img/DSC_5016_editted.jpg">
+            <p>This site was created by Jim Baldwin.  It uses data from mapbox.com and darksky.net.</p>
+            <img class="portrait" src="img/DSC_5016_editted.png">
         </div>
         {{>footer}}
     </body>
